--- a/ClientSide/Handmade/Handmade.vcxproj.filters
+++ b/ClientSide/Handmade/Handmade.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClInclude Include="String.h">
       <Filter>Header Files\Own Code</Filter>
     </ClInclude>
+    <ClInclude Include="TagGame.h">
+      <Filter>Header Files\Own Code</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio.cpp">
@@ -195,6 +198,9 @@
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
     <ClCompile Include="String.cpp">
+      <Filter>Source Files\Own Code</Filter>
+    </ClCompile>
+    <ClCompile Include="TagGame.cpp">
       <Filter>Source Files\Own Code</Filter>
     </ClCompile>
   </ItemGroup>
